Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.84** devel

****  Fix parameter pins interspersed with cells broke in 3.840.  [Bernard Deadman]


* Verilator 3.841 2012/09/03

***   Add --savable to support model save/restore.  [Jeremy Bennett]

***   Support '{} assignment pattern on structures, part of bug355.

****  Fix double-deep parameter cell WIDTHs, bug541.  [Hiroki Honda]

****  Fix imports under multiple instantiated cells, bug542.  [Alex Solomatnikov]

****  Fix defparam in generate broke in 3.840, bug543.  [Alex Solomatnikov]

****  Fix duplicate begin error broke in 3.840, bug548.  [Alex Solomatnikov]

****  Fix triangle symbol resolution error broke in 3.840, bug550.  [Ted Campbell]


* Verilator 3.840 2012/07/31 Beta

**    Rewrote tristate handling; supports tri0, tri1, tristate bit selects,
      concatenates and pullup/pulldowns, bug395, bug56, bug54, bug51.
      [Alex Solomatnikov, Lane Brooks, et al]

**    Support packed structures and unions, bug181.
      Note this was a major internal change that may lead to some instability.

***   Support tri0 and tri1, bug462.  [Alex Solomatnikov]

***   Support nmos and pmos, bug488.  [Alex Solomatnikov]

***   Add INITIALDLY warning on initial assignments, bug478.  [Alex Solomatnikov]

***   Add PINMISSING and PINNOCONNECT lint checks.

***   Add --converge-limit option.

***   Fix generate operators not short circuiting, bug413.  [by Jeremy Bennett]

***   Fix parameters not supported in constant functions, bug474. [Alex Solomatnikov]

****  Fix duplicate warnings/errors, bug516.  [Alex Solomatnikov]

****  Fix signed extending biops with WIDTH warning off, bug511. [Junji Hashimoto]

****  Fix ITOD internal error on real conversions, bug491.  [Alex Solomatnikov]

****  Fix input and real loosing real data type, bug501.  [Alex Solomatnikov]
